--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,9 +2,9 @@
 %h1 All Movies
 = form_tag movies_path, :id => 'ratings_form', :method => :get do
   Include: 
-  - @all_ratings.each do |rating, value|
+  - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, value 
+    = check_box_tag "ratings[#{rating}]", 1, @rating_selection.has_key?(rating), :id => "ratings_#{rating}"
   = submit_tag 'Refresh', :id => "ratings_submit"
 %table#movies
   %thead
