--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -9,9 +9,9 @@
 %table#movies
   %thead
     %tr
-      %th{:class => @title_header, :id => 'title_header'}= link_to 'Title', movies_path(:sort_by => 'title')
+      %th{:class => @title_header}= link_to 'Title', movies_path(:sort_by => 'title'), :id => 'title_header'
       %th Rating
-      %th{:class => @release_date_header, :id => 'release_date_header' }= link_to "Release Date", movies_path(:sort_by => 'release_date')
+      %th{:class => @release_date_header}= link_to "Release Date", movies_path(:sort_by => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
