--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,14 +1,12 @@
-%h1 Create New Movie
+%h1 Login
 
-= form_tag movies_path do
+= form_for movies_path do
 
-  = label :movie, :title, 'Title'
+  = label :movie, :title, 'Email'
   = text_field :movie, 'title'
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  = label :movie, :release_date, 'Password'
+  = password_field :movie, 'release_date'
 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
-
-  = submit_tag 'Save Changes'
+  = submit_tag 'Login'
+= link_to 'Back to House Listings', movies_path
