--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -1,8 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: White;
-  color: DarkSlateGrey;
+  background: LightGrey;
+  color: Black;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 10pt;
 }
@@ -28,7 +28,7 @@ h1.title {
   margin: 0 0 1em;
   padding: 10px;
   background-color: orange;
-  color: white;
+  color: black;
   border-bottom: 4px solid gold;
   font-size: 2em;
   font-style: normal;
