--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -1,16 +1,14 @@
 -# edit.html.haml using partial
 
-%h1 Edit Existing Movie
+%h1 Edit House Listing
 
 = form_tag movie_path(@movie), :method => :put do
 
   = label :movie, :title, 'Title'
   = text_field :movie, 'title'
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
-
-  = label :movie, :release_date, 'Released On'
+  = label :movie, :release_date, 'Date available On'
   = date_select :movie, :release_date
 
-  = submit_tag 'Update Movie Info'
+  = submit_tag 'Update House Listing'
+= link_to 'Back to house listings', movies_path
