--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,24 +1,16 @@
 -#  This file is app/views/movies/index.html.haml
-%h1 All Movies
-= form_tag movies_path, :id => 'ratings_form', :method => :get do
-  Include: 
-  - @all_ratings.each do |rating|
-    = rating
-    = check_box_tag "ratings[#{rating}]", 1, @rating_selection.has_key?(rating), :id => "ratings_#{rating}"
-  = submit_tag 'Refresh', :id => "ratings_submit"
+%h1 House Listings
 %table#movies
   %thead
     %tr
-      %th{:class => @title_header}= link_to 'Title', movies_path(:sort_by => 'title'), :id => 'title_header'
-      %th Rating
-      %th{:class => @release_date_header}= link_to "Release Date", movies_path(:sort_by => 'release_date'), :id => 'release_date_header'
+      %th{:class => @title_header}= link_to 'House', movies_path(:sort_by => 'title'), :id => 'title_header'
+      %th{:class => @release_date_header}= link_to "Date available", movies_path(:sort_by => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title 
-        %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
-= link_to 'Add new movie', new_movie_path
+-#= link_to 'Add new movie', new_movie_path
