--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -4,10 +4,7 @@
 
 %ul#details
   %li
-    Rating:
-    = @movie.rating
-  %li
-    Released on:
+    Date available on:
     = @movie.release_date.strftime("%B %d, %Y")
 
 %h3 Description:
@@ -16,4 +13,4 @@
 
 = link_to 'Edit', edit_movie_path(@movie)
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
-= link_to 'Back to movie list', movies_path
+= link_to 'Back to house listings', movies_path
