--- a/app/views/houses/welcome.html.haml
+++ b/app/views/houses/welcome.html.haml
@@ -1,4 +1,4 @@
--#  This file is app/views/houses/index.html.haml
+-#  This file is app/views/houses/welcome.html.haml
 %h1 Welcome to QuickRent!
 
 = link_to 'Login', new_house_path
