Set up the Gemfile

--- a/app/views/houses/new.html.haml
+++ b/app/views/houses/new.html.haml
@@ -2,7 +2,7 @@
 
 = form_for houses_path do
 
-  = label :house, :title, 'Email'
+  = label :house, :title, 'Name'
   = text_field :house, 'title'
 
   = label :house, :release_date, 'Password'
