--- a/app/views/houses/index.html.haml
+++ b/app/views/houses/index.html.haml
@@ -1,18 +1,28 @@
 -#  This file is app/views/houses/index.html.haml
 %h1 House Listings
 
+= form_tag houses_path, :method => :get, :id => 'ratings_form' do
+  = hidden_field_tag "title_sort", true if @title_header
+  = hidden_field_tag ":release_date_sort", true if @date_header
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @rating_selection.include?(rating), :id => "ratings_#{rating}"
 
+  = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#houses
   %thead
     %tr
       %th{:class => @title_header}= link_to 'House', houses_path(:sort_by => 'title'), :id => 'title_header'
+      %th Area
       %th{:class => @release_date_header}= link_to "Date available", houses_path(:sort_by => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @houses.each do |house|
       %tr
         %td= house.title 
+        %td= house.rating
         %td= house.release_date
         %td= link_to "More about #{house.title}", house_path(house)
 
