--- a/app/views/houses/index.html.haml
+++ b/app/views/houses/index.html.haml
@@ -26,4 +26,6 @@
         %td= house.release_date
         %td= link_to "More about #{house.title}", house_path(house)
 
--#= link_to 'Add new house', new_house_path
+
+= link_to "Back to Welcome page", controller: "welcome"
+%p~ "\n"
