--- a/app/views/houses/welcome.html.haml
+++ b/app/views/houses/welcome.html.haml
@@ -3,6 +3,9 @@
 
 = link_to 'Login', new_house_path
 %p~ "\n"
+
+= link_to 'Welcome', welcome_path
+%p~ "\n"
 = link_to 'House Listings', houses_path
 %p~ "\n"
 = link_to "About Us", controller: "aboutus"
